@@ -1,12 +1,13 @@
 package lec.spring.studygroupclone.Services;
 
+import java.io.File;
+import java.io.FileNotFoundException;
+import java.io.FileOutputStream;
+import java.io.IOException;
+import java.time.LocalDateTime;
+import java.util.Base64;
 import java.util.Collections;
-import lec.spring.studygroupclone.Models.Account;
-import lec.spring.studygroupclone.Repositories.AccountRepository;
-import lec.spring.studygroupclone.config.AppConfig;
-import lec.spring.studygroupclone.dataMappers.CurrentAccount;
-import lec.spring.studygroupclone.dataMappers.Profile;
-import lombok.RequiredArgsConstructor;
+
 import org.springframework.mail.SimpleMailMessage;
 import org.springframework.mail.javamail.JavaMailSender;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
@@ -18,7 +19,12 @@ import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.time.LocalDateTime;
+import lec.spring.studygroupclone.Models.Account;
+import lec.spring.studygroupclone.Repositories.AccountRepository;
+import lec.spring.studygroupclone.config.AppConfig;
+import lec.spring.studygroupclone.dataMappers.CurrentAccount;
+import lec.spring.studygroupclone.dataMappers.Profile;
+import lombok.RequiredArgsConstructor;
 
 @Service
 @Transactional
@@ -28,8 +34,8 @@ public class AccountService implements UserDetailsService {
     private final JavaMailSender javaMailSender;
     private final AccountRepository accountRepository;
 
-    public void processSignUp(Account account){
-        account.setPassword( AppConfig.passwordEncoder().encode(account.getPassword()) );
+    public void processSignUp(Account account) {
+        account.setPassword(AppConfig.passwordEncoder().encode(account.getPassword()));
         account.setEmailVerified(false);
         save(account);
         account.generateEmailCheckToken();
@@ -46,16 +52,16 @@ public class AccountService implements UserDetailsService {
         SimpleMailMessage simpleMailMessage = new SimpleMailMessage();
         simpleMailMessage.setTo(member.getEmail());
         simpleMailMessage.setSubject("STUDY GROUP SITE JOINED");
-        simpleMailMessage.setText("/check-email-token?" +
-                "token=" + member.getEmailCheckToken() + "&" +
-                "email=" + member.getEmail());
+        simpleMailMessage.setText(
+                "/check-email-token?" + "token=" + member.getEmailCheckToken() + "&" + "email=" + member.getEmail());
 
         javaMailSender.send(simpleMailMessage);
     }
 
     public Account checkEmailToken(String token, String email) {
         Account account = accountRepository.findByEmail(email);
-        if( account == null || !account.getEmailCheckToken().equals(token) ) return null;
+        if (account == null || !account.getEmailCheckToken().equals(token))
+            return null;
 
         account.setEmailVerified(true);
         account.setJoinedAt(LocalDateTime.now());
@@ -72,18 +78,16 @@ public class AccountService implements UserDetailsService {
 
     private void login(Account account) {
         CurrentAccount currentAccount = new CurrentAccount(account);
-        UsernamePasswordAuthenticationToken token = new UsernamePasswordAuthenticationToken(
-                currentAccount, //principal
+        UsernamePasswordAuthenticationToken token = new UsernamePasswordAuthenticationToken(currentAccount, // principal
                 account.getPassword(),
-//                List.of(new SimpleGrantedAuthority("ROLE_USER"))
-                Collections.singletonList(new SimpleGrantedAuthority("ROLE_USER"))
-        );
+                // List.of(new SimpleGrantedAuthority("ROLE_USER"))
+                Collections.singletonList(new SimpleGrantedAuthority("ROLE_USER")));
         SecurityContextHolder.getContext().setAuthentication(token);
     }
 
     public boolean resendVerificationToken(Account account) {
         Account member = accountRepository.findByEmail(account.getEmail());
-        if( member.canSendEmailCheckToken() ) {
+        if (member.canSendEmailCheckToken()) {
             member.generateEmailCheckToken();
             member = this.save(member);
             sendSignupConfirmEmail(member);
@@ -92,26 +96,27 @@ public class AccountService implements UserDetailsService {
         return false;
     }
 
-//    public boolean signIn(Account account) {
-//        Account target = accountRepository.findByEmail(account.getEmail());
-//        if(target == null) return false;
-//
-//        boolean isUser = appConfig.passwordEncoder().matches(account.getPassword(), target.getPassword());
-//
-//        if(isUser) {
-//            this.login(target);
-//            return true;
-//        }
-//
-//        return false;
-//    }
+    // public boolean signIn(Account account) {
+    // Account target = accountRepository.findByEmail(account.getEmail());
+    // if(target == null) return false;
+    //
+    // boolean isUser = appConfig.passwordEncoder().matches(account.getPassword(),
+    // target.getPassword());
+    //
+    // if(isUser) {
+    // this.login(target);
+    // return true;
+    // }
+    //
+    // return false;
+    // }
 
     @Override
     @Transactional(readOnly = true)
     public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
         Account account = accountRepository.findByEmail(username);
 
-        if( account == null ){
+        if (account == null) {
             throw new UsernameNotFoundException(username);
         }
 
@@ -121,13 +126,21 @@ public class AccountService implements UserDetailsService {
     @Transactional(readOnly = true)
     public Account getAccount(String nickname) {
         Account user = accountRepository.findByNickname(nickname);
-        if(user == null){
+        if (user == null) {
             throw new IllegalArgumentException("There is no user who has " + nickname + " as a nickName");
         }
         return user;
     }
 
-    public void update(Account account, Profile profile) {
+    public void update(Account account, Profile profile) throws IOException {
+
+        // byte[] img = Base64.getDecoder().decode(profile.getProfileImage().getBytes(StandardCharsets.UTF_8));
+        String[] str_imgs = profile.getProfileImage().split(",");
+        byte[] img = Base64.getDecoder().decode(str_imgs[1]);
+        FileOutputStream fos = new FileOutputStream(new File("/static/images/accounts/"+account.getNickname()+".png")); 
+        fos.write(img);
+        fos.close();
+
         account.setDescription(profile.getDescription());
         account.setJob(profile.getJob());
         account.setWebsite(profile.getWebsite());
